fix margin, gaps, and paddings for better use in lower screen sisez.

--- a/style/styles.scss
+++ b/style/styles.scss
@@ -29,21 +29,39 @@ body {
   justify-content: space-between;
   padding: 5rem 0;
   gap: 2rem;
-  border: 1px solid blue;
-
+  // border: 1px solid blue;
   @media (max-width: 1400px) {
     margin: 0 3rem;
   }
+  @media (max-width: 1000px) {
+    flex-direction: column;
+  }
   @media (max-width: 600px) {
-    margin: 0 1rem;
+    margin: 0 2rem;
+    padding: 3rem 0;
+ 
   }
   .main {
     width: 70%;
     flex: 3;
+    @media (max-width: 600px) {
+      margin: 0 auto;
+      padding: 0;
+    }
+    @media (max-width: 1000px) {
+      margin: 0 auto;
+      width: 100%;
+    }
     .title {
       font-size: 4rem;
       font-weight: 700;
       margin-bottom: 1rem;
+      @media (max-width: 600px) {
+        font-size: 3rem;
+      }
+      @media (max-width: 450px) {
+        font-size: 2.5rem;
+      }
     }
     .menu-items {
       display: grid;
@@ -105,6 +123,7 @@ body {
           display: flex;
           align-items: center;
           border: 0.5px solid rgba(0, 0, 0, 0.5);
+          white-space: nowrap; // Prevent text wrapping
           .cart-icon {
             width: 22px;
             height: 22px;
@@ -160,11 +179,15 @@ body {
     font-weight: 700;
     color: var(--Red);
     height: fit-content;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 
-    @media (max-width: 1023px) {
-      // Hide cart on smaller screens
-      display: none;
-    }
+    // @media (max-width: 1000px) {
+    //   // Hide cart on smaller screens
+    //   // display: none;
+    //   // margin: 0 5.5rem;
+     
+    // }
     #cartItemsCount {
       font-size: 2rem;
       font-weight: 700;
